<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_checkin">

    <fragment
        android:id="@+id/navigation_checkin"
        android:name="com.example.parkingcover.ui.checkin.CheckinFragment"
        android:label="@string/title_checkin"
        tools:layout="@layout/fragment_checkin" />

    <fragment
        android:id="@+id/navigation_checkout"
        android:name="com.example.parkingcover.ui.checkout.CheckoutFragment"
        android:label="@string/title_checkout"
        tools:layout="@layout/fragment_checkout" />

    <fragment
        android:id="@+id/navigation_carlist"
        android:name="com.example.parkingcover.ui.carlist.CarListFragment"
        android:label="@string/title_carlist"
        tools:layout="@layout/fragment_car_list" />
</navigation>