<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.checkout.CheckoutFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_checkout_vehicle_id"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Vehicle ID"
        android:layout_marginTop="80dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etv_checkout_vehicle_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_checkout_time_out"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="Time out: HHMM"
        app:layout_constraintEnd_toEndOf="@id/til_checkout_vehicle_id"
        app:layout_constraintStart_toStartOf="@id/til_checkout_vehicle_id"
        app:layout_constraintTop_toBottomOf="@id/til_checkout_vehicle_id">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etv_checkout_time_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_checkout_total_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textSize="24sp"
        android:drawableStart="@drawable/ic_baseline_access_time_24"
        tools:text="@string/total_time"
        app:layout_constraintStart_toStartOf="@+id/til_checkout_time_out"
        app:layout_constraintTop_toBottomOf="@+id/til_checkout_time_out" />

    <TextView
        android:id="@+id/tv_checkout_total_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawableStart="@drawable/ic_baseline_attach_money_24"
        android:textSize="24sp"
        tools:text="@string/total_price"
        app:layout_constraintStart_toStartOf="@+id/tv_checkout_total_time"
        app:layout_constraintTop_toBottomOf="@+id/tv_checkout_total_time" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_checkout_send"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginBottom="120dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/button_send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>